@@ -1,40 +1,0 @@
-language: cpp
-
-compiler:
-  - gcc
-  - clang
-
-os:
-  - linux
-  - osx
-
-dist: focal
-
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - cmake
-
-cache:
-  directories:
-    - /usr/local/Homebrew
-
-before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get install libglfw3-dev libglfw3;
-    fi
-
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew update;
-      brew install glfw3;
-    fi
-
-  - cmake --version
-
-before_script:
-  - cmake -Hexamples -Bbuild
-
-script:
-  - cmake --build build --config Release
