@@ -1,40 +1,0 @@
-version: '{build}'
-pull_requests:
-  do_not_increment_build_number: true
-image:
-- Visual Studio 2019
-- Visual Studio 2017
-- Visual Studio 2015
-configuration:
-- Release
-#- Debug
-platform:
-- x86
-- x64
-clone_depth: 1
-init:
-- cmd: >-
-    set arch=Win32
-
-    if "%PLATFORM%"=="x64" ( set arch=x64)
-
-    echo %APPVEYOR_BUILD_WORKER_IMAGE%
-
-    if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2019" ( set generator="Visual Studio 16 2019" )
-
-    if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2017" ( set generator="Visual Studio 15 2017" )
-
-    if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2015" ( set generator="Visual Studio 14 2015" )
-
-    if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2013" ( set generator="Visual Studio 12 2013" )
-
-    echo %generator%
-before_build:
-- cmd: >-
-    cmake --version
-
-    cmake -Hexamples -Bbuild -G %generator% -A %arch%
-build:
-  project: build\ALL_BUILD.vcxproj
-  parallel: true
-  verbosity: minimal
